updates(hero): adjusts height issue on small screens

--- a/src/components/custom/custom-home-team/custom-home-team.sass
+++ b/src/components/custom/custom-home-team/custom-home-team.sass
@@ -81,7 +81,7 @@
     @media screen and (max-height: 750px) and (min-width: 600px)
       height: 80vh
 
-    @media screen and (min-width: 2000px) and (min-height: 1100px)
+    @media screen and (min-width: 1920px) and (min-height: 1100px)
       width: calc(1920px / 6.25)
       height: calc((1920px / 6.25) * 3)
 
