--- a/src/components/hero/hero-home/hero-home.sass
+++ b/src/components/hero/hero-home/hero-home.sass
@@ -7,8 +7,8 @@
   height: 100%
   overflow: hidden
 
-  @media screen and (max-height: 601px)
-    height: calc(100vw * .5625) !important
+  // @media screen and (max-height: 601px)
+  //   height: calc(100vw * .5625) !important
 
   &__video
     position: absolute
